--- a/ON-your-styleguide/index.html
+++ b/ON-your-styleguide/index.html
@@ -14,7 +14,9 @@
 <body>
     <example-component example-prop="Dies ist ein Property-Inhalt der Webcomponent"> Dies ist der Slot-Inhalt </example-component>
     <p>Ihr könnt all diesen Content verändern und mehr Unterseiten hinzufügen</p>
-    <small>Viel Spaß beim kreativ werden :-)</small>
+    <small>Viel Spaß beim kreativ werden :-)
+    </small>
+    <p> Seb ist auch am Start. Endlich kann ich den Code einfügen :D </p>
 </body>
 
 </html>
