--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <p>Testtesttesttest</p>
+    <p> Git für Anfänger ist Bullshit</p>
     <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
   </body>
 </html>
