--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <body>
     <p>Testtesttesttest</p>
     <p> Git für Anfänger ist Bullshit</p>
+    <p>Hallo ICH bin auch dabei</p>
     <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
   </body>
 </html>
