--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <p>Testtesttesttest</p>
     <p> Git für Anfänger ist Bullshit</p>
     <p>Hallo ICH bin auch dabei</p>
+    <p>test hallohallo</p>
     <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
   </body>
 </html>
