--- a/ON-your-styleguide/index.html
+++ b/ON-your-styleguide/index.html
@@ -12,11 +12,15 @@
 </head>
 
 <body>
-    <example-component example-prop="Dies ist ein Property-Inhalt der Webcomponent"> Dies ist der Slot-Inhalt </example-component>
-    <p>Ihr könnt all diesen Content verändern und mehr Unterseiten hinzufügen</p>
-    <small>Viel Spaß beim kreativ werden :-)
-    </small>
-    <p> Seb ist auch am Start. Endlich kann ich den Code einfügen :D </p>
+    <website-component>
+      <header-component>
+        <logo-component></logo-component>
+        <links-head-component></links-head-component>
+        <socials-component></socials-component>
+      </header-component>
+      <main-content-component></main-content-component>
+      <footer-component></footer-component>
+    </website-component>
 </body>
 
 </html>
