--- a/ON-your-styleguide/index.html
+++ b/ON-your-styleguide/index.html
@@ -2,25 +2,27 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="/dist/stencil-starter-on/stencil-starter-on.esm.js" type="module"></script>
-    <link rel="stylesheet" href="/dist/stencil-starter-on/stencil-starter-on.css" />
-    <title>your design guide</title>
-    <script type="text/javascript" src="/ON-your-styleguide/script.js" defer></script>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="/dist/stencil-starter-on/stencil-starter-on.esm.js" type="module"></script>
+  <link rel="stylesheet" href="/dist/stencil-starter-on/stencil-starter-on.css" />
+  <title>your design guide</title>
+  <script type="text/javascript" src="/ON-your-styleguide/script.js" defer></script>
 </head>
 
 <body>
-    <website-component>
-      <header-component>
-        <logo-component></logo-component>
-        <links-head-component></links-head-component>
-        <socials-component></socials-component>
-      </header-component>
-      <main-content-component></main-content-component>
-      <footer-component></footer-component>
-    </website-component>
+  <website-component>
+    <header-component>
+      <logo-component></logo-component>
+      <links-head-component></links-head-component>
+      <socials-component></socials-component>
+    </header-component>
+    <main-content-component></main-content-component>
+    <footer-component>
+      <logo-component id='mainLogo' imagename='logo.webp'></logo-component>
+    </footer-component>
+  </website-component>
 </body>
 
 </html>
