create Contact component, update html

--- a/ON-your-styleguide/index.html
+++ b/ON-your-styleguide/index.html
@@ -14,13 +14,16 @@
 <body>
   <website-component>
     <header-component>
-      <logo-component></logo-component>
+      <logo-component id='mainLogo' imagename='logo.webp'></logo-component>></logo-component>
       <links-head-component></links-head-component>
       <socials-component></socials-component>
     </header-component>
     <main-content-component></main-content-component>
     <footer-component>
       <logo-component id='mainLogo' imagename='logo.webp'></logo-component>
+      <headline-container type='h2' headline='Kontakt'>
+        <contact-component mail='example@example.com'></contact-component>
+      </headline-container>
     </footer-component>
   </website-component>
 </body>
