set up disclaimer component, update html

--- a/ON-your-styleguide/index.html
+++ b/ON-your-styleguide/index.html
@@ -9,6 +9,10 @@
   <link rel="stylesheet" href="/dist/stencil-starter-on/stencil-starter-on.css" />
   <title>your design guide</title>
   <script type="text/javascript" src="/ON-your-styleguide/script.js" defer></script>
+  <link href='https://fonts.googleapis.com' rel='preconnect'>
+  <link crossorigin href='https://fonts.gstatic.com' rel='preconnect'>
+  <link href='https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Roboto:wght@500&display=swap'
+        rel='stylesheet'>
 </head>
 
 <body>
@@ -20,11 +24,12 @@
     </header-component>
     <main-content-component></main-content-component>
     <footer-component>
-      <logo-component id='mainLogo' imagename='logo.webp'></logo-component>
+      <logo-component id='footerLogo' imagename='logo.webp'></logo-component>
       <headline-container type='h2' headline='Kontakt'>
         <contact-component mail='example@example.com'></contact-component>
       </headline-container>
     </footer-component>
+    <disclaimer-component text='© 2022 MosFit-Personalcoaching. All rights reserved'></disclaimer-component>
   </website-component>
 </body>
 
