create link block, update index.html

--- a/ON-your-styleguide/index.html
+++ b/ON-your-styleguide/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="/dist/stencil-starter-on/stencil-starter-on.esm.js" type="module"></script>
   <link rel="stylesheet" href="/dist/stencil-starter-on/stencil-starter-on.css" />
-  <title>your design guide</title>
+  <title>MosFit-Personalcoaching</title>
   <script type="text/javascript" src="/ON-your-styleguide/script.js" defer></script>
   <link href='https://fonts.googleapis.com' rel='preconnect'>
   <link crossorigin href='https://fonts.gstatic.com' rel='preconnect'>
@@ -25,6 +25,10 @@
     <main-content-component></main-content-component>
     <footer-component>
       <logo-component id='footerLogo' imagename='logo.webp'></logo-component>
+      <headline-container type='h2' headline='Navigation'>
+        <link-block links='[{"label":"Über uns","url":"http://test.de/"},{"label":"Impressum","url":"http://test1.de/"},{"label":"Produkte","url":"http://test2.de/"},{"label":"Mitglieder","url":"http://test2.de/"}]'></link-block>
+        <link-block links='[{"label":"Über uns","url":"http://test.de/"},{"label":"Impressum","url":"http://test1.de/"},{"label":"Produkte","url":"http://test2.de/"},{"label":"Mitglieder","url":"http://test2.de/"}]'></link-block>
+      </headline-container>
       <headline-container type='h2' headline='Kontakt'>
         <contact-component mail='example@example.com'></contact-component>
       </headline-container>
