--- a/ON-your-styleguide/index.html
+++ b/ON-your-styleguide/index.html
@@ -18,7 +18,7 @@
 <body>
   <website-component>
     <header-component>
-      <logo-component id='mainLogo' imagename='logo.webp'></logo-component>></logo-component>
+      <logo-component id='mainLogo' imagename='logo.webp'></logo-component></logo-component>
       <links-head-component></links-head-component>
       <socials-component></socials-component>
     </header-component>
