--- a/ON-your-styleguide/index.html
+++ b/ON-your-styleguide/index.html
@@ -12,22 +12,35 @@
   <link href='https://fonts.googleapis.com' rel='preconnect'>
   <link crossorigin href='https://fonts.gstatic.com' rel='preconnect'>
   <link href='https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Roboto:wght@500&display=swap'
-        rel='stylesheet'>
+    rel='stylesheet'>
 </head>
 
 <body>
   <website-component>
     <header-component>
-      <logo-component id='mainLogo' imagename='logo.webp'></logo-component></logo-component>
+      <logo-component id='mainLogo' imagename='logo.webp'></logo-component>
+      </logo-component>
       <links-head-component></links-head-component>
       <socials-component></socials-component>
     </header-component>
-    <main-content-component></main-content-component>
+    <main-content-component>
+      <content-area-component type='imageonly' bgimg='dumbell.jpg'></content-area-component>
+      <content-area-component type='textheadlinebg' bgimg='cardio.jpg'
+        text='Deine persönliche Beratung in der besten Stadt Deutschlands.' headline='MosFit-Personalcoaching'>
+      </content-area-component>
+      <content-area-component type='textheadlinecolorbg' bgcolor='orange'
+        text='Deine persönliche Beratung in der besten Stadt Deutschlands.' headline='MosFit-Personalcoaching'>
+      </content-area-component>
+    </main-content-component>
     <footer-component>
       <logo-component id='footerLogo' imagename='logo.webp'></logo-component>
       <headline-container type='h2' headline='Navigation'>
-        <link-block links='[{"label":"Über uns","url":"http://test.de/"},{"label":"Impressum","url":"http://test1.de/"},{"label":"Produkte","url":"http://test2.de/"},{"label":"Mitglieder","url":"http://test2.de/"}]'></link-block>
-        <link-block links='[{"label":"Über uns","url":"http://test.de/"},{"label":"Impressum","url":"http://test1.de/"},{"label":"Produkte","url":"http://test2.de/"},{"label":"Mitglieder","url":"http://test2.de/"}]'></link-block>
+        <link-block
+          links='[{"label":"Über uns","url":"http://test.de/"},{"label":"Impressum","url":"http://test1.de/"},{"label":"Produkte","url":"http://test2.de/"},{"label":"Mitglieder","url":"http://test2.de/"}]'>
+        </link-block>
+        <link-block
+          links='[{"label":"Über uns","url":"http://test.de/"},{"label":"Impressum","url":"http://test1.de/"},{"label":"Produkte","url":"http://test2.de/"},{"label":"Mitglieder","url":"http://test2.de/"}]'>
+        </link-block>
       </headline-container>
       <headline-container type='h2' headline='Kontakt'>
         <contact-component mail='example@example.com'></contact-component>
