create slideshow, del. shlideshow component

--- a/ON-your-styleguide/index.html
+++ b/ON-your-styleguide/index.html
@@ -24,6 +24,7 @@
       <socials-component></socials-component>
     </header-component>
     <main-content-component>
+      <content-area-component type='slideshow'></content-area-component>
       <content-area-component type='imageonly' bgimg='dumbell.jpg'></content-area-component>
       <content-area-component type='textheadlinebg' bgimg='cardio.jpg'
         text='Deine persönliche Beratung in der besten Stadt Deutschlands.' headline='MosFit-Personalcoaching'>
