add cookie consent

--- a/ON-your-styleguide/index.html
+++ b/ON-your-styleguide/index.html
@@ -48,6 +48,7 @@
       </headline-container>
     </footer-component>
     <disclaimer-component text='© 2022 MosFit-Personalcoaching. All rights reserved'></disclaimer-component>
+    <cookie-consent></cookie-consent>
   </website-component>
 </body>
 
