develop sucess, link struktur, unterseiten

--- a/ON-your-styleguide/index.html
+++ b/ON-your-styleguide/index.html
@@ -19,7 +19,6 @@
   <website-component>
     <header-component>
       <logo-component id='mainLogo' imagename='logo.webp'></logo-component>
-      </logo-component>
       <links-head-component></links-head-component>
       <socials-component></socials-component>
     </header-component>
@@ -37,11 +36,11 @@
       <logo-component id='footerLogo' imagename='logo.webp'></logo-component>
       <headline-container type='h2' headline='Navigation'>
         <link-block
-          links='[{"label":"Über uns","url":"http://test.de/"},{"label":"Impressum","url":"http://test1.de/"},{"label":"Produkte","url":"http://test2.de/"},{"label":"Mitglieder","url":"http://test2.de/"}]'>
+          links='[{"label":"Produkte","url":"/ON-your-styleguide/produkte.html"},{"label":"Mitglieder","url":"/ON-your-styleguide/mitglieder.html"},{"label":"Über uns","url":"/ON-your-styleguide/ueber-uns.html"},{"label":"Impressum","url":"/ON-your-styleguide/impressum.html"},{"label":"Datenschutzerklärung","url":"/ON-your-styleguide/datenschutz.html"}]'>
         </link-block>
         <link-block
-          links='[{"label":"Über uns","url":"http://test.de/"},{"label":"Impressum","url":"http://test1.de/"},{"label":"Produkte","url":"http://test2.de/"},{"label":"Mitglieder","url":"http://test2.de/"}]'>
-        </link-block>
+        links='[{"label":"Produkte","url":"/ON-your-styleguide/produkte.html"},{"label":"Mitglieder","url":"/ON-your-styleguide/mitglieder.html"},{"label":"Über uns","url":"/ON-your-styleguide/ueber-uns.html"},{"label":"Impressum","url":"/ON-your-styleguide/impressum.html"},{"label":"Datenschutzerklärung","url":"/ON-your-styleguide/datenschutz.html"}]'>
+      </link-block>
       </headline-container>
       <headline-container type='h2' headline='Kontakt'>
         <contact-component mail='example@example.com'></contact-component>
