--- a/ON-your-styleguide/index.html
+++ b/ON-your-styleguide/index.html
@@ -27,6 +27,7 @@
       <content-area-component type='imageonly' bgimg='dumbell.jpg'></content-area-component>
       <content-area-component type='textheadlinebg' bgimg='cardio.jpg'
         text='Deine persönliche Beratung in der besten Stadt Deutschlands.' headline='MosFit-Personalcoaching'>
+        <timer-component hours='8'></timer-component>
       </content-area-component>
       <content-area-component type='textheadlinecolorbg' bgcolor='orange'
         text='Deine persönliche Beratung in der besten Stadt Deutschlands.' headline='MosFit-Personalcoaching'>
@@ -39,8 +40,8 @@
           links='[{"label":"Produkte","url":"/ON-your-styleguide/produkte.html"},{"label":"Mitglieder","url":"/ON-your-styleguide/mitglieder.html"},{"label":"Über uns","url":"/ON-your-styleguide/ueber-uns.html"},{"label":"Impressum","url":"/ON-your-styleguide/impressum.html"},{"label":"Datenschutzerklärung","url":"/ON-your-styleguide/datenschutz.html"}]'>
         </link-block>
         <link-block
-        links='[{"label":"Produkte","url":"/ON-your-styleguide/produkte.html"},{"label":"Mitglieder","url":"/ON-your-styleguide/mitglieder.html"},{"label":"Über uns","url":"/ON-your-styleguide/ueber-uns.html"},{"label":"Impressum","url":"/ON-your-styleguide/impressum.html"},{"label":"Datenschutzerklärung","url":"/ON-your-styleguide/datenschutz.html"}]'>
-      </link-block>
+          links='[{"label":"Produkte","url":"/ON-your-styleguide/produkte.html"},{"label":"Mitglieder","url":"/ON-your-styleguide/mitglieder.html"},{"label":"Über uns","url":"/ON-your-styleguide/ueber-uns.html"},{"label":"Impressum","url":"/ON-your-styleguide/impressum.html"},{"label":"Datenschutzerklärung","url":"/ON-your-styleguide/datenschutz.html"}]'>
+        </link-block>
       </headline-container>
       <headline-container type='h2' headline='Kontakt'>
         <contact-component mail='example@example.com'></contact-component>
