--- a/ON-your-styleguide/index.html
+++ b/ON-your-styleguide/index.html
@@ -17,22 +17,34 @@
 
 <body>
   <website-component>
+
+
     <header-component>
       <logo-component id='mainLogo' imagename='logo.webp'></logo-component>
       <links-head-component></links-head-component>
       <socials-component></socials-component>
     </header-component>
+
+
     <main-content-component>
       <content-area-component type='slideshow'></content-area-component>
-      <content-area-component type='imageonly' bgimg='dumbell.jpg'></content-area-component>
-      <content-area-component type='textheadlinebg' bgimg='cardio.jpg'
-        text='Deine persönliche Beratung in der besten Stadt Deutschlands.' headline='MosFit-Personalcoaching'>
-        <timer-component hours='8'></timer-component>
-      </content-area-component>
       <content-area-component type='textheadlinecolorbg' bgcolor='orange'
         text='Deine persönliche Beratung in der besten Stadt Deutschlands.' headline='MosFit-Personalcoaching'>
+        <Durch id="Absatz1">Durch unsere Kompetenz und Wertschätzung verhelfen wir unseren Mitgliedern dazu, mehr
+          Lebensqualität zu </br>
+          erfahren und gemeinsam Deine persönlichen Ziele in Deinem Fitnessstudio in Mosbach zu erreichen. </br>
+          Wir arbeiten kontinuierlich daran, unseren Mitgliedern die höchste Qualität anzubieten. Durch unsere
+          Erfahrungen, </br>
+          Leistungen und Trainingsmöglichkeiten unterstützen wir jeden dabei, der uns sein Vertrauen schenkt. </br>
+          </p>
       </content-area-component>
+      <content-area-component type='textheadlinebg' bgimg='Orange.jpg'
+      text='Informieren Sie sich jetzt bei unseren Coaches über unsere GesUndFit-Trainingsprogramme.' headline='Jetzt gesund in den Sommer starten!'>
+    </content-area-component>
     </main-content-component>
+
+
+
     <footer-component>
       <logo-component id='footerLogo' imagename='logo.webp'></logo-component>
       <headline-container type='h2' headline='Navigation'>
@@ -47,8 +59,11 @@
         <contact-component mail='example@example.com'></contact-component>
       </headline-container>
     </footer-component>
+
+
     <disclaimer-component text='© 2022 MosFit-Personalcoaching. All rights reserved'></disclaimer-component>
     <cookie-consent></cookie-consent>
+
   </website-component>
 </body>
 
