changes ausversehen auf master

--- a/ON-your-styleguide/index.html
+++ b/ON-your-styleguide/index.html
@@ -38,6 +38,17 @@
           Leistungen und Trainingsmöglichkeiten unterstützen wir jeden dabei, der uns sein Vertrauen schenkt. </br>
           </p>
       </content-area-component>
+      <content-area-component type='textheadlinecolorbg' bgcolor='black' fontcolor='orange'
+      text='Lerne unsere Coaches jetzt persönlich bei einer Beratung kennen.' headline='Unsere Coaches'>
+
+      <div class="pics"> 
+        <content-area-component class="pic" type="imageonly" bgimg='felix.png'></content-area-component>
+        <content-area-component class="pic" type="imageonly" bgimg='heiko.png'></content-area-component>
+        <content-area-component class="pic" type="imageonly" bgimg='moritz.png'></content-area-component>
+        <content-area-component class="pic" type="imageonly" bgimg='seb.png'></content-area-component>
+        <content-area-component class="pic" type="imageonly" bgimg='jendrik.jpg'></content-area-component>
+      </div>
+    </content-area-component>
       <content-area-component type='textheadlinebg' bgimg='Orange.jpg'
       text='Informieren Sie sich jetzt bei unseren Coaches über unsere GesUndFit-Trainingsprogramme.' headline='Jetzt gesund in den Sommer starten!'>
     </content-area-component>
