--- a/ON-your-styleguide/index.html
+++ b/ON-your-styleguide/index.html
@@ -60,14 +60,14 @@
       <logo-component id='footerLogo' imagename='logo.webp'></logo-component>
       <headline-container type='h2' headline='Navigation'>
         <link-block
-          links='[{"label":"Produkte","url":"/ON-your-styleguide/produkte.html"},{"label":"Mitglieder","url":"/ON-your-styleguide/mitglieder.html"},{"label":"Über uns","url":"/ON-your-styleguide/ueber-uns.html"},{"label":"Impressum","url":"/ON-your-styleguide/impressum.html"},{"label":"Datenschutzerklärung","url":"/ON-your-styleguide/datenschutz.html"}]'>
+          links='[{"label":"Produkte","url":"/ON-your-styleguide/produkte.html"},{"label":"Mitglieder","url":"/ON-your-styleguide/mitglieder.html"},{"label":"Impressum","url":"/ON-your-styleguide/impressum.html"},{"label":"Datenschutzerklärung","url":"/ON-your-styleguide/datenschutz.html"}]'>
         </link-block>
         <link-block
-          links='[{"label":"Produkte","url":"/ON-your-styleguide/produkte.html"},{"label":"Mitglieder","url":"/ON-your-styleguide/mitglieder.html"},{"label":"Über uns","url":"/ON-your-styleguide/ueber-uns.html"},{"label":"Impressum","url":"/ON-your-styleguide/impressum.html"},{"label":"Datenschutzerklärung","url":"/ON-your-styleguide/datenschutz.html"}]'>
+          links='[{"label":"Produkte","url":"/ON-your-styleguide/produkte.html"},{"label":"Mitglieder","url":"/ON-your-styleguide/mitglieder.html"},{"label":"Impressum","url":"/ON-your-styleguide/impressum.html"},{"label":"Datenschutzerklärung","url":"/ON-your-styleguide/datenschutz.html"}]'>
         </link-block>
       </headline-container>
       <headline-container type='h2' headline='Kontakt'>
-        <contact-component mail='example@example.com'></contact-component>
+        <contact-component mail='kontakt@mos-fit.de'></contact-component>
       </headline-container>
     </footer-component>
 
