--- a/ON-your-styleguide/referenzen.html
+++ b/ON-your-styleguide/referenzen.html
@@ -31,14 +31,14 @@
         <logo-component id='footerLogo' imagename='logo.webp' href="./index.html"></logo-component>
         <headline-container type='h2' headline='Navigation'>
           <link-block
-                    links='[{"label":"Home","url":"/ON-your-styleguide/index.html"},{"label":"Produkte","url":"/ON-your-styleguide/produkte.html"},{"label":"Mitglieder","url":"/ON-your-styleguide/mitglieder.html"},{"label":"Über uns","url":"/ON-your-styleguide/ueber-uns.html"},{"label":"Impressum","url":"/ON-your-styleguide/impressum.html"},{"label":"Datenschutzerklärung","url":"/ON-your-styleguide/datenschutz.html"}]'>
+                    links='[{"label":"Home","url":"/ON-your-styleguide/index.html"},{"label":"Produkte","url":"/ON-your-styleguide/produkte.html"},{"label":"Mitglieder","url":"/ON-your-styleguide/mitglieder.html"},{"label":"Impressum","url":"/ON-your-styleguide/impressum.html"},{"label":"Datenschutzerklärung","url":"/ON-your-styleguide/datenschutz.html"}]'>
                 </link-block>
                 <link-block
-                    links='[{"label":"Home","url":"/ON-your-styleguide/index.html"},{"label":"Produkte","url":"/ON-your-styleguide/produkte.html"},{"label":"Mitglieder","url":"/ON-your-styleguide/mitglieder.html"},{"label":"Über uns","url":"/ON-your-styleguide/ueber-uns.html"},{"label":"Impressum","url":"/ON-your-styleguide/impressum.html"},{"label":"Datenschutzerklärung","url":"/ON-your-styleguide/datenschutz.html"}]'>
+                    links='[{"label":"Home","url":"/ON-your-styleguide/index.html"},{"label":"Produkte","url":"/ON-your-styleguide/produkte.html"},{"label":"Mitglieder","url":"/ON-your-styleguide/mitglieder.html"},{"label":"Impressum","url":"/ON-your-styleguide/impressum.html"},{"label":"Datenschutzerklärung","url":"/ON-your-styleguide/datenschutz.html"}]'>
                 </link-block>
         </headline-container>
         <headline-container type='h2' headline='Kontakt'>
-          <contact-component mail='example@example.com'></contact-component>
+          <contact-component mail='kontakt@mos-fit.de'></contact-component>
         </headline-container>
       </footer-component>
       <disclaimer-component text='© 2022 MosFit-Personalcoaching. All rights reserved'></disclaimer-component>
