--- a/ON-your-styleguide/index.html
+++ b/ON-your-styleguide/index.html
@@ -38,6 +38,8 @@
           Leistungen und Trainingsmöglichkeiten unterstützen wir jeden dabei, der uns sein Vertrauen schenkt. </br>
           </p>
       </content-area-component>
+      <content-area-component type="imageonly" bgimg="angebot_1.jpg">
+      </content-area-component>
       <content-area-component type='textheadlinecolorbg' bgcolor='black' fontcolor='orange'
       text='Lerne unsere Coaches jetzt persönlich bei einer Beratung kennen.' headline='Unsere Coaches'>
 
@@ -59,9 +61,6 @@
     <footer-component>
       <logo-component id='footerLogo' imagename='logo.webp'></logo-component>
       <headline-container type='h2' headline='Navigation'>
-        <link-block
-          links='[{"label":"Produkte","url":"/ON-your-styleguide/produkte.html"},{"label":"Mitglieder","url":"/ON-your-styleguide/mitglieder.html"},{"label":"Impressum","url":"/ON-your-styleguide/impressum.html"},{"label":"Datenschutzerklärung","url":"/ON-your-styleguide/datenschutz.html"}]'>
-        </link-block>
         <link-block
           links='[{"label":"Produkte","url":"/ON-your-styleguide/produkte.html"},{"label":"Mitglieder","url":"/ON-your-styleguide/mitglieder.html"},{"label":"Impressum","url":"/ON-your-styleguide/impressum.html"},{"label":"Datenschutzerklärung","url":"/ON-your-styleguide/datenschutz.html"}]'>
         </link-block>
