--- a/ON-your-styleguide/index.html
+++ b/ON-your-styleguide/index.html
@@ -32,14 +32,16 @@
         text='Deine persönliche Beratung in der besten Stadt Deutschlands.' headline='MosFit-Personalcoaching'>
         <Durch id="Absatz1">Durch unsere Kompetenz und Wertschätzung verhelfen wir unseren Mitgliedern dazu, mehr
           Lebensqualität zu </br>
-          erfahren und gemeinsam Deine persönlichen Ziele in Deinem Fitnessstudio in Mosbach zu erreichen. </br>
+          erfahren und gemeinsam deine persönlichen Ziele in deinem Fitnessstudio in Mosbach zu erreichen. </br>
           Wir arbeiten kontinuierlich daran, unseren Mitgliedern die höchste Qualität anzubieten. Durch unsere
           Erfahrungen, </br>
           Leistungen und Trainingsmöglichkeiten unterstützen wir jeden dabei, der uns sein Vertrauen schenkt. </br>
           </p>
       </content-area-component>
-      <content-area-component type="imageonly" bgimg="angebot_1.jpg">
-      </content-area-component>
+      <content-area-component id='Angebot' type="textheadlinebg" bgimg="angebot_1.jpg" fontcolor='orange' 
+      text='Jetzt Personaltraining machen und 40€ sparen.' headline='Die Zeit läuft!'>
+      <timer-component hours='8'></timer-component>
+    </content-area-component>
       <content-area-component type='textheadlinecolorbg' bgcolor='black' fontcolor='orange'
       text='Lerne unsere Coaches jetzt persönlich bei einer Beratung kennen.' headline='Unsere Coaches'>
 
