--- a/ON-your-styleguide/index.html
+++ b/ON-your-styleguide/index.html
@@ -30,7 +30,7 @@
       <content-area-component type='slideshow'></content-area-component>
       <content-area-component type='textheadlinecolorbg' bgcolor='orange'
         text='Deine persönliche Beratung in der besten Stadt Deutschlands.' headline='MosFit-Personalcoaching'>
-        <Durch id="Absatz1">Durch unsere Kompetenz und Wertschätzung verhelfen wir unseren Mitgliedern dazu, mehr
+        <p id="Absatz1">Durch unsere Kompetenz und Wertschätzung verhelfen wir unseren Mitgliedern dazu, mehr
           Lebensqualität zu </br>
           erfahren und gemeinsam deine persönlichen Ziele in deinem Fitnessstudio in Mosbach zu erreichen. </br>
           Wir arbeiten kontinuierlich daran, unseren Mitgliedern die höchste Qualität anzubieten. Durch unsere
