--- a/ON-your-styleguide/index.html
+++ b/ON-your-styleguide/index.html
@@ -52,9 +52,11 @@
         <content-area-component class="pic" type="imageonly" bgimg='seb.png'></content-area-component>
         <content-area-component class="pic" type="imageonly" bgimg='jendrik.jpg'></content-area-component>
       </div>
+      <div id="Coaches">Felix Heiko Morty Sebastian Jendrik</div>
     </content-area-component>
       <content-area-component type='textheadlinebg' bgimg='Orange.jpg'
       text='Informieren Sie sich jetzt bei unseren Coaches über unsere GesUndFit-Trainingsprogramme.' headline='Jetzt gesund in den Sommer starten!'>
+     
     </content-area-component>
     </main-content-component>
 
