--- a/ON-your-styleguide/referenzen.html
+++ b/ON-your-styleguide/referenzen.html
@@ -24,7 +24,11 @@
       </header-component>
 
       <main-content-component>
-          <content-area-component type='imageonly' bgimg='OIP.jpg'></content-area-component>
+        <content-area-component type='slideshow2'></content-area-component>
+        <content-area-component id='Angebot' type="textheadlinebg" bgimg="angebot_1.jpg" fontcolor='orange' 
+        text='Jetzt Personaltraining machen und 40€ sparen.' headline='Die Zeit läuft!'>
+        <timer-component hours='8'></timer-component>
+      </content-area-component>
       </main-content-component>
 
       <footer-component>
