Trash-Seiten entfernt

--- a/ON-your-styleguide/index.html
+++ b/ON-your-styleguide/index.html
@@ -66,7 +66,7 @@
       <logo-component id='footerLogo' imagename='logo.webp'></logo-component>
       <headline-container type='h2' headline='Navigation'>
         <link-block
-          links='[{"label":"Produkte","url":"/ON-your-styleguide/produkte.html"},{"label":"Mitglieder","url":"/ON-your-styleguide/mitglieder.html"},{"label":"Impressum","url":"/ON-your-styleguide/impressum.html"},{"label":"Datenschutzerklärung","url":"/ON-your-styleguide/datenschutz.html"}]'>
+          links='[{"label":"Home","url":"/ON-your-styleguide/index.html"},{"label":"Referenzen","url":"/ON-your-styleguide/referenzen.html"},{"label":"Impressum","url":"/ON-your-styleguide/impressum.html"},{"label":"Datenschutzerklärung","url":"/ON-your-styleguide/datenschutz.html"}]'>
         </link-block>
       </headline-container>
       <headline-container type='h2' headline='Kontakt'>
