add imp and daten

--- a/ON-your-styleguide/impressum.html
+++ b/ON-your-styleguide/impressum.html
@@ -24,7 +24,80 @@
       </header-component>
 
       <main-content-component>
-          <content-area-component type='imageonly' bgimg='OIP.jpg'></content-area-component>
+        <content-area-component id='fullheadline' type='textheadlinecolorbg' bgcolor='orange' fontcolor='black'
+      headline='Impressum'>
+</content-area-component>
+<div id='impressum' >
+<pre>
+<h4>Adresse</h4>
+MOS-Fit Consulting Gmbh
+Winkelgasse 5A
+74821 Mosbach
+
+<h4>Öffnungszeiten:</h4>
+
+Mo – Fr: 6.00 – 23.00 Uhr
+Sa & So: 9.00 – 19.00 Uhr
+Feiertage: 9.00 – 19.00 Uhr
+
+Kontakt:
+
+Telefon: 07934/6669000
+Sie erreichen die Puls Weikersheim GbR von Montag bis Freitag zwischen 8.00 – 12.00 Uhr und 16.00 – 20.00 Uhr.
+
+kontakt@mos-fit.de
+
+Sitz der GbR: Winkelgasse 5, 74821 Mosbach
+Geschäftsführer: Jendrik Weiss
+
+Register:
+
+Handelsregister mit
+Registernummer: HRB 3891
+Registergericht: Mosbach
+
+Liebes Mitglied, bei Fragen zu deiner Mitgliedschaft kannst du dich im Onlineportal von aidoo informieren. Nutze hierfür den Login unter folgendem Link: Aidoo – Verträge (aidoo-online.de). 
+Für weitere Fragen kannst du dich gerne im Studio an das Personal wenden.
+
+<h4>Haftungsausschluss</h4>
+
+Haftungsausschluss
+
+Inhalt des Onlineangebotes
+
+Der Autor übernimmt keinerlei Gewähr für die Aktualität, Richtigkeit und Vollständigkeit der bereitgestellten Informationen auf unserer Website. Haftungsansprüche gegen den Autor, 
+welche sich auf Schäden materieller oder ideeller Art beziehen, 
+die durch die Nutzung oder Nichtnutzung der dargebotenen Informationen bzw. durch die Nutzung fehlerhafter und unvollständiger Informationen verursacht wurden, sind grundsätzlich ausgeschlossen, 
+sofern seitens des Autors kein nachweislich vorsätzliches oder grob fahrlässiges Verschulden vorliegt.
+
+Autor behält es sich ausdrücklich vor, Teile der Seiten oder das gesamte Angebot ohne gesonderte Ankündigung zu verändern, zu ergänzen, zu löschen oder die Veröffentlichung zeitweise oder endgültig einzustellen.
+
+Verweise und Links
+
+Bei direkten oder indirekten Verweisen auf fremde Webseiten, die außerhalb des Verantwortungsbereiches des Autors liegen, würde eine Haftungsverpflichtung ausschließlich in dem Fall in Kraft treten, 
+in dem der Autor von den Inhalten Kenntnis hat und es ihm technisch möglich und zumutbar wäre, 
+die Nutzung im Falle rechtswidriger Inhalte zu verhindern.
+
+Der Autor erklärt hiermit ausdrücklich, dass zum Zeitpunkt der Linksetzung keine illegalen Inhalte auf den zu verlinkenden Seiten erkennbar waren. Auf die aktuelle und zukünftige Gestaltung, 
+die Inhalte oder die Urheberschaft der verlinkten/verknüpften Seiten hat der Autor keinerlei Einfluss. 
+Deshalb distanziert er sich hiermit ausdrücklich von allen Inhalten aller verlinkten /verknüpften Seiten, die nach der Linksetzung verändert wurden. 
+Diese Feststellung gilt für alle innerhalb des eigenen Internetangebotes gesetzten Links und Verweise sowie für Fremdeinträge in vom Autor eingerichteten Gästebüchern,
+Diskussionsforen, Linkverzeichnissen, Mailinglisten und in allen anderen Formen von Datenbanken, auf deren Inhalt externe Schreibzugriffe möglich sind. Für illegale, 
+fehlerhafte oder unvollständige Inhalte und insbesondere für Schäden, die aus der Nutzung oder Nichtnutzung solcherart dargebotener Informationen entstehen, 
+haftet allein der Anbieter der Seite, auf welche verwiesen wurde, nicht derjenige, der über Links auf die jeweilige Veröffentlichung lediglich verweist.
+
+Urheber- und Kennzeichenrecht
+
+Der Autor ist bestrebt, in allen Publikationen die Urheberrechte der verwendeten Bilder, Grafiken, Tondokumente, Videosequenzen und Texte zu beachten, von ihm selbst erstellte Bilder,
+Grafiken, Tondokumente, Videosequenzen und Texte zu nutzen oder auf lizenzfreie Grafiken, Tondokumente, Videosequenzen und Texte zurückzugreifen.
+
+Alle innerhalb des Internetangebotes genannten und ggf. durch Dritte geschützten Marken- und Warenzeichen unterliegen uneingeschränkt den Bestimmungen des 
+jeweils gültigen Kennzeichenrechts und den Besitzrechten der jeweiligen eingetragenen Eigentümer. 
+Allein aufgrund der bloßen Nennung ist nicht der Schluss zu ziehen, dass Markenzeichen nicht durch Rechte Dritter geschützt sind!
+
+Das Copyright für veröffentlichte, vom Autor selbst erstellte Objekte bleibt allein beim Autor der Seiten. Eine Vervielfältigung oder Verwendung solcher Grafiken, 
+Tondokumente, Videosequenzen und Texte in anderen elektronischen oder gedruckten Publikationen ist ohne ausdrückliche Zustimmung des Autors nicht gestattet.
+    </pre> </div>
       </main-content-component>
 
       <footer-component>
